<resources>
    <string name="bandu">伴读</string>
    <string name="app_name">new_newbandu</string>
    <string name="title_activity_class_manager">ClassManagerActivity</string>
    <string name="title_activity_verify_student">VerifyStudentActivity</string>
    <string name="title_activity_select_grade">SelectGradeActivity</string>
    <string name="title_activity_bind_text_book">BindTextBookActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hint_classname">你的班级名称</string>
    <string name="set_classname">编辑班级名称</string>
    <string name="confirm">确定</string>
    <string name="work_preview_time">最晚提交时间</string>
    <string name="work_preview_student">需完成的学生</string>
    <string name="check_phone_number">号码不对哦</string>
    <string name="work_preview_level">作业完成质量</string>
    <string name="add_class_num">班级编号</string>
    <string name="add_class_error">班级编号不正确，请重新输入</string>
    <string name="add_class_hint">请输入10位班级编号</string>
    <string name="work_preview_description">作业额外说明，可以写在这里</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="title_activity_student_main">StudentMainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_student_textbook_chose">StudentTextbookChoseActivity</string>
    <string name="title_activity_student_home">StudentHomeActivity</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_student_exercise_download">StudentExerciseDownloadActivity</string>
    <string name="title_activity_student_do_exercise">StudentDoExerciseActivity</string>
    <string name="title_string_workinfo">作业详情</string>
    <string name="title_string_save">保存进度</string>
    <string name="do_work_des">按住下方录音键,就可以录音了~</string>
    <string name="msg_load_ing">加载中....</string>
    <string name="title_activity_student_exercise_progress">StudentExerciseProgressActivity</string>
    <string name="exercise_current"><u>本次练习</u></string>
    <string name="exercise"><u>练习本</u></string>
    <string name="exercise_text_student_home">练习</string>
    <string name="work_text_student_home">作业</string>
    <string name="my_info_home">个人中心</string>
    <string name="my_class_teacher_home">我的班级</string>
    <string name="members">制作人员</string>
    <string name="company_info">公司介绍</string>
    <string name="group_info">集团介绍</string>
    <string name="user_agreement">伴读软件用户服务协议</string>
    <string name="copy_right">北京东方汇通教育科技有限公司版权所有</string>
    <string name="about_us">关于我们</string>
    <string name="name">姓名</string>
    <string name="name_input">请输入您的姓名</string>
    <string name="ok">确认</string>
    <string name="add_class">添加学校</string>
    <string name="school">学校</string>
    <string name="school_input_hint">请输入要添加的学校名称</string>
    <string name="special_char_info">学校名称含特殊字符</string>
    <string name="school_null_info">学校不能为空</string>
    <string name="coutdown_info">秒后自动返回个人资料页面</string>
    <string name="user_agree">用户协议</string>
    <string name="bind_parent">家长绑定</string>
    <string name="bind_step">绑定步骤</string>
    <string name="attention_wx">关注伴读微信帐号</string>
    <string name="click_to_bind">点击公众帐号-帐号绑定</string>
    <string name="input_bind_code">输入家长绑定码：</string>
    <string name="book_select">教材选择</string>
    <string name="check_work">作业大数据</string>
    <string name="make_sure_info">确认撤消吗？</string>
    <string name="submit_but_text1">上传提交</string>
    <string name="submit_but_text2">查看排名</string>
    <string name="notice">提示</string>
    <string name="make_sure">确认</string>
    <string name="cancel">取消</string>
    <string name="no_data">没有数据了</string>
    <string name="no_data_now">暂无数据</string>
    <string name="cancel1">撤销</string>
    <string name="class_manager">班级管理</string>
    <string name="my_student">我的学生</string>
    <string name="bind_book">绑定教材</string>
    <string name="class_transfer">班级转让</string>
    <string name="code_phone_null_info">学号和手机不能为空</string>
    <string name="please_input">请按要求输入以下信息</string>
    <string name="text1_info">1.承接老师的伴读学号</string>
    <string name="text2_info">2.承接老师在伴读中绑定的手机后4位号码（如若没有，请先让承接老师绑定）</string>
    <string name="bandu_code">伴读学号</string>
    <string name="phone_last_four">手机后4位</string>
    <string name="transfer">转让</string>
    <string name="attention_info">注意：转让班级后您将不能查看该班级信息</string>
    <string name="classname_special_char_info">班级名称不能含有特殊字符</string>
    <string name="classname_null_info">班级名称不能为空</string>
    <string name="create_try_again">创建班级失败,请重新尝试</string>
    <string name="modify_try_again">修改班级名称失败,请重新尝试</string>
    <string name="feed_back">意见反馈</string>
    <string name="mail_incorrect">邮箱格式不正确</string>
    <string name="feed_back_input">请输入反馈内容</string>
    <string name="limit_char_info">已达到最大字数限制</string>
    <string name="input_feed_back">请描述使用中遇到的问题：</string>
    <string name="feed_back_hint">我们将为您不断改进\nWe\'d love to hear from you!</string>
    <string name="mail_hint">如需了解反馈结果，请留下邮箱</string>
    <string name="send">发送</string>
    <string name="press_again">再按一次退出程序</string>
    <string name="login_failed_info">登录失败,请检查网络</string>
    <string name="login_succ">登录成功</string>
    <string name="accounts">帐号</string>
    <string name="accout_input_hint">请输入11位手机号/伴读学号</string>
    <string name="password">密码</string>
    <string name="pass_input_hint">请输入密码</string>
    <string name="forget_pass">忘记密码？</string>
    <string name="regist">注册</string>
    <string name="use_right_now">立即试用</string>
    <string name="login">登录</string>
    <string name="personal_center">个人中心</string>
    <string name="work">作业</string>
    <string name="select_content">选择模块</string>
    <string name="student_work_info">个人作业结果</string>
    <string name="no_modify">不可改</string>
    <string name="avater">头像</string>
    <string name="in_school">所在学校</string>
    <string name="phone">绑定手机</string>
    <string name="in_class">所有班级</string>
    <string name="class_code">班级编号</string>
    <string name="sys_msg">系统消息</string>
    <string name="modify_pass">修改密码</string>
    <string name="download_manager">下载管理</string>
    <string name="exit">退出</string>
    <string name="modify_name">修改姓名</string>
    <string name="input_new_pass">请输入新密码</string>
    <string name="wrong_pass">原密码输入错误</string>
    <string name="input_old_pass">请输入旧密码</string>
    <string name="old_pass">旧密码</string>
    <string name="new_pass">新密码</string>
    <string name="input_new_pass_hint">请输入新密码(密码为6-16位字符)</string>
    <string name="modify_phone">修改手机</string>
    <string name="pass_input_info">为保证帐号安全，请输入当前伴读登录密码</string>
    <string name="wrong_phone">手机号错误</string>
    <string name="modify_succ">修改成功</string>
    <string name="get_again">重新获取</string>
    <string name="send_succ">发送成功</string>
    <string name="input_new_phone">请输入新手机号码</string>
    <string name="get_code">获取验证码</string>
    <string name="identifying_code">验证码</string>
    <string name="input_code">请输入验证码</string>
    <string name="identify">验证</string>
    <string name="personal_data">个人资料</string>
    <string name="upload_succ">上传成功</string>
    <string name="name_special_char">姓名不能包含特殊符号</string>
    <string name="input_all">请填写完整</string>
    <string name="read_agreement">请先阅读用户协议</string>
    <string name="input_basic_info">填写基本信息</string>
    <string name="role">角色</string>
    <string name="warning_info">选定角色后不能修改哦！</string>
    <string name="student">学生</string>
    <string name="teacher">老师</string>
    <string name="input_phone_hint">请输入11位手机号</string>
    <string name="pass_input_hint_info">请输入密码(密码为6-16位字符)</string>
    <string name="agree_agreement">同意伴读网络协议</string>
    <string name="not_wifi">当前不是WIFI环境，继续将可能产生流浪费用</string>
    <string name="reset_pass">重设密码</string>
    <string name="input_code_info">请输入收到的验证码</string>
    <string name="see_work">查看作业</string>
    <string name="select_province">选择省份</string>
    <string name="select_city">选择市</string>
    <string name="select_district">选择区县</string>
    <string name="preview">预览</string>
    <string name="select_grade">选择年级</string>
    <string name="select_role">选择角色</string>
    <string name="select_school">选择学校</string>
    <string name="add_school">添加学校</string>
    <string name="select_student">选择学生</string>
    <string name="select_student_info">请选择学生</string>
    <string name="work_statistics">作业统计</string>
    <string name="already_comment">已评价</string>
    <string name="write_comment">写评语</string>
    <string name="reading">朗读</string>
    <string name="edit">编辑</string>
    <string name="default_exercise_unitone">Unit 1 Welcome to Bandu!</string>
    <string name="default_exercise_lessonone">Lesson 1</string>
    <string name="default_exercise_partone">Part 1</string>
    <string name="advanced_setting">高级设置</string>
    <string name="text_statistics">统计</string>
    <string name="text_namelist">名单</string>
    <string name="text_username">username</string>
    <string name="text_othername">othername</string>
    <string name="text_username1">username1</string>
    <string name="text_other1">other1</string>
    <string name="text_other2">other2</string>
    <string name="text_other3">other3</string>
    <string name="text_other4">other4</string>
    <string name="text_changeUser">选择一个小伙伴吧</string>
    <string name="text_change">换一换</string>
    <string name="text_sortContent">按完成作业时间由新到旧排序</string>
    <string name="button_save">不保存返回练习表列表</string>
    <string name="text_classname">班级1</string>
    <string name="umeng_example_home_btn_analytics">统计分析</string>
    <string name="umeng_example_home_btn_xp">应用联盟</string>
    <string name="umeng_example_home_btn_ad">移动广告</string>
    <string name="umeng_example_home_btn_tools">工具</string>
    <string name="umeng_example_home_btn_fb">用户反馈</string>
    <string name="umeng_example_home_btn_update">自动更新</string>
    <string name="umeng_example_home_btn_plus">社交分享</string>
    <string name="umeng_example_home_btn_xp_ufp">Umeng For Publisher</string>
    <string name="umeng_example_xp_home_btn_container">嵌入容器</string>
    <string name="umeng_example_xp_home_btn_banner">横幅</string>
    <string name="umeng_example_xp_home_btn_banner_ufp">"横幅\n(UFP)"</string>
    <string name="umeng_example_xp_home_btn_handler">小把手</string>
    <string name="umeng_example_xp_home_btn_handler_ufp">"小把手\n(UFP)"</string>
    <string name="umeng_example_xp_home_btn_tab">多页面</string>
    <string name="umeng_example_xp_home_btn_custom">自定义样式</string>
    <string name="umeng_example_xp_home_btn_wap">Web页</string>
    <string name="umeng_example_xp_home_btn_wap_ufp">"Web页\n(UFP)"</string>
    <string name="umeng_example_xp_home_btn_textlink">文字链</string>
    <string name="umeng_example_xp_home_btn_container_header">轮播大图\n(UFP)</string>
    <string name="umeng_example_xp_home_btn_push_header">推送弹窗\n(UFP)</string>
    <string name="umeng_example_xp_home_handler_icons">图标列表\n(UFP)</string>
    <string name="umeng_example_fb_home_btn_simple">简单反馈</string>
    <string name="actionbar_activity_not_found">打开Activity失败</string>
    <string name="umeng_example_home_hint_wait">敬请期待</string>
    <string name="UMBreak_Network">未联网</string>
    <string name="UMUpdateTitle">发现新版本</string>
    <string name="UMNewVersion">最新版本: </string>
    <string name="UMUpdateContent">更新内容</string>
    <string name="UMUpdateSize">仅需要下载:</string>
    <string name="UMTargetSize">新版本大小:</string>
    <string name="UMGprsCondition">（提示：非WIFI环境）</string>
    <string name="UMUpdateNow">立即更新</string>
    <string name="feed_back_info">请选择问题类别，以便我们更好的处理:</string>
    <string name="help_info">紧急问题可拨打客服电话400-650-9455获取及时帮助</string>
</resources>