<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/title_green_layout"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/input_basic_info"
            android:textColor="@color/black"
            android:textSize="@dimen/content_textsize_30"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:paddingLeft="10dp">

            <TextView
                android:id="@+id/tv2"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/name"
                android:textColor="@color/light_black"
                android:textSize="@dimen/content_textsize_14"/>

            <EditText
                android:cursorVisible="true"
                android:textCursorDrawable="@drawable/test_cursor"
                android:id="@+id/name_edt"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:layout_toRightOf="@+id/tv2"
                android:background="@null"
                android:hint="@string/name_input"
                android:textColorHint="@color/text_gray"
                android:textSize="@dimen/content_textsize_14"/>
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:background="@color/gray"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:paddingLeft="10dp">

            <TextView
                android:id="@+id/tv4"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/role"
                android:textColor="@color/light_black"
                android:textSize="@dimen/content_textsize_14"/>

            <ImageView
                android:id="@+id/img"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="12dp"
                android:layout_toRightOf="@+id/tv4"
                android:src="@drawable/warning"/>

            <TextView
                android:id="@+id/tv7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@+id/img"
                android:gravity="center_vertical"
                android:text="@string/warning_info"
                android:textColor="@color/orange"
                android:textSize="@dimen/content_textsize_14"/>

            <TextView
                android:id="@+id/student_tv"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_below="@+id/tv7"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@+id/tv4"
                android:background="@drawable/back_select_round"
                android:gravity="center"
                android:text="@string/student"
                android:textColor="@color/student_color"
                android:textSize="@dimen/content_textsize_18"/>

            <TextView
                android:id="@+id/teacher_tv"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_below="@+id/tv7"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@+id/student_tv"
                android:background="@drawable/back_select_round1"
                android:gravity="center"
                android:text="@string/teacher"
                android:textColor="@color/teacher_color"
                android:textSize="@dimen/content_textsize_18"/>
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:background="@color/gray"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:paddingLeft="10dp">

            <TextView
                android:id="@+id/tv8"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/phone"
                android:textColor="@color/light_black"
                android:textSize="@dimen/content_textsize_14"
                android:textIsSelectable="false"/>

            <EditText
                android:inputType="number"
                android:cursorVisible="true"
                android:textCursorDrawable="@drawable/test_cursor"
                android:textColor="@color/black"
                android:id="@+id/phone_edt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/tv8"
                android:background="@null"
                android:hint="@string/input_phone_hint"
                android:textColorHint="@color/text_gray"
                android:textSize="@dimen/content_textsize_14"/>
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:background="@color/gray"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp"
            android:paddingLeft="10dp">

            <TextView
                android:id="@+id/tv1"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/identifying_code"
                android:textColor="@color/light_black"
                android:textSize="@dimen/content_textsize_14"/>

            <EditText
                android:cursorVisible="true"
                android:textCursorDrawable="@drawable/test_cursor"
                android:textColor="@color/black"
                android:id="@+id/code_edt"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/tv1"
                android:background="@null"
                android:hint="@string/input_code"
                android:textColorHint="@color/text_gray"
                android:textSize="@dimen/content_textsize_14"/>

            <TextView
                android:id="@+id/code_tv"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:background="@drawable/textview_selector"
                android:paddingBottom="5dp"
                android:gravity="center"
                android:paddingTop="5dp"
                android:text="@string/get_code"
                android:textColor="@color/white"
                android:textSize="@dimen/content_textsize_14"/>
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:background="@color/gray"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp"
            android:paddingLeft="10dp">

            <TextView
                android:id="@+id/tv3"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/password"
                android:textColor="@color/light_black"
                android:textSize="@dimen/content_textsize_14"/>

            <EditText
                android:cursorVisible="true"
                android:textCursorDrawable="@drawable/test_cursor"
                android:textColor="@color/black"
                android:id="@+id/pass1_edt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/tv3"
                android:background="@null"
                android:hint="@string/pass_input_hint_info"
                android:inputType="textPassword"
                android:textColorHint="@color/text_gray"
                android:textSize="@dimen/content_textsize_14"/>
            <ImageView
                android:id="@+id/pass_img"
                android:layout_marginRight="10dp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:src="@mipmap/invisiable"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_alignParentEnd="false"
                android:padding="10dp"/>
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:background="@color/gray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp">

            <ImageView
                android:id="@+id/agree_img"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/check"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/agree_agreement"
                android:textColor="@color/black"
                android:textSize="@dimen/content_textsize_16"/>

            <TextView
                android:id="@+id/agreement_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/user_agree"
                android:textColor="@color/blue"
                android:textSize="@dimen/content_textsize_16"/>
        </LinearLayout>

        <Button
            android:id="@+id/next_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/back_login_button_green"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="@dimen/title_textsize"/>
    </LinearLayout>
    </ScrollView>
</LinearLayout>
